--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ APP_NAME="Sample Rest API Go"
 APP_VERSION="1.0.0"
 APP_URL=localhost
 APP_PORT=8000
+APP_LOG=true
 
 DB_DRIVER=mysql
 DB_HOST=localhost
