--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,18 @@
+#APPLICATION
 APP_NAME="Sample Rest API Go"
 APP_VERSION="1.0.0"
 APP_URL=localhost
 APP_PORT=8000
 APP_LOG=true
 
+#DATABASE
 DB_DRIVER=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=
 DB_USERNAME=root
 DB_PASSWORD=
+
+#JWT
+JWT_KEY=
+JWT_EXPIRESIN=
