add default JWT Config

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_URL=localhost
 APP_PORT=8000
 APP_LOG=true
 
+=
 #DATABASE
 DB_DRIVER=mysql
 DB_HOST=localhost
@@ -13,7 +14,8 @@ DB_NAME=
 DB_USERNAME=root
 DB_PASSWORD=
 
+=
 #JWT
-JWT_KEY=
-JWT_EXPIRESIN_ACCESS=
-JWT_EXPIRESIN_REFRESH=
+JWT_KEY=rahasia
+JWT_EXPIRESIN_ACCESS=1
+JWT_EXPIRESIN_REFRESH=168
